fix: Board item visibility issue when moving using keyboard arrows

--- a/src/internal/item-container/styles.scss
+++ b/src/internal/item-container/styles.scss
@@ -25,6 +25,10 @@
   z-index: 2000;
   position: fixed;
 }
+.transformed.keyboardDragged {
+  z-index: 2000;
+  position: absolute;
+}
 .resized {
   z-index: 2000;
   position: absolute;
